--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             if (appStoreFile) {
                 signingConfig signingConfigs.sign
@@ -105,8 +106,6 @@ dependencies {
     implementation 'com.github.xuexiangjys.XUtil:xutil-core:2.0.0'
     //键值对存储
     implementation 'com.tencent:mmkv:1.3.3'
-    //富文本
-    implementation 'com.zzhoujay.richtext:richtext:3.0.8'
     //工具类
     implementation 'com.github.xuexiangjys.XUtil:xutil-core:2.0.0'
     implementation 'com.github.xuexiangjys.XUtil:xutil-sub:2.0.0'
