feat: 支持生成 minify 之后的 APK

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,16 +7,16 @@ def appKeyPassword = System.getenv("KEY_PASSWORD")
 def properties = new Properties()
 properties.load(project.rootProject.file('local.properties').newDataInputStream())
 if (appStoreFile == null) {
-    appStoreFile = properties.getProperty('appStoreFile');
+    appStoreFile = properties.getProperty('appStoreFile')
 }
 if (appStorePassword == null) {
-    appStorePassword = properties.getProperty('appStorePassword');
+    appStorePassword = properties.getProperty('appStorePassword')
 }
 if (appKeyAlias == null) {
-    appKeyAlias = properties.getProperty('appKeyAlias');
+    appKeyAlias = properties.getProperty('appKeyAlias')
 }
 if (appKeyPassword == null) {
-    appKeyPassword = properties.getProperty('appKeyPassword');
+    appKeyPassword = properties.getProperty('appKeyPassword')
 }
 
 android {
