feat: 适配新版教务系统成绩查询功能，老模块增强与旧版教务系统的兼容性

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
         <activity android:name=".activity.SettingActivity" />
         <activity android:name=".moreFun.ExperimentScoreActivity" />
         <activity android:name=".moreFun.ExamScoreActivity" />
+        <activity android:name=".moreFun.ExamScoreNewActivity" />
         <activity android:name=".activity.DetailActivity" />
         <activity android:name=".activity.SetTermActivity" />
         <activity android:name=".activity.LoginActivity" />
